# breakthrough

./: Cargo.toml  README.md
benches/: game_logic.rs  solving.rs
src/: main.rs
src/engine/: classic.rs  fast_win_check.rs  minimax.rs  mod.rs  random.rs
src/game/: breakthrough.rs  mod.rs  node.rs
tests/: correctness.rs  end-1.txt  end-2.txt  end-3.txt  end-4.txt  end-5.txt  end-6.txt  mate-in-n.txt
tests/common/: mod.rs
v2/: lib.rs
v2/core/: constants8.rs  mod.rs  move8.rs  node8.rs
v2/evaluation/: features.rs  mod.rs
v2/search/: mod.rs  negamax.rs  table.rs  zobrist.rs
