[package]
name = "breakthrough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["rand_chacha"] }
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "game_logic"
harness = false
