[package]
name = "breakthrough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.0"

[dev-dependencies]
anyhow = "1.0.75"
criterion = "0.5.1"

[[bench]]
name = "game_logic"
harness = false

[[bench]]
name = "solving"
harness = false
