[package]
name = "breakthrough"
version = "0.1.0"
edition = "2021"

[lib]
name = "v2"
path = "v2/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
anyhow = "1.0.75"
